# lounger-platform

./: .gitignore  README.md
backend/: lounger_platform.db  pyproject.toml  run.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  project.py
backend/app/routers/: __init__.py  case.py  project.py  report.py  task.py
backend/app/schemas/: __init__.py  case.py  project.py  report.py  task.py
backend/app/services/: git_service.py  pytest_service.py  report_service.py  scaffold_service.py
frontend/: package-lock.json  package.json  playwright.config.js
frontend/e2e/: project-detail.spec.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: CaseSelector.vue  ReportDetailDialog.vue  SelectorNode.vue  TreeNode.vue
frontend/src/router/: index.js
frontend/src/views/: ProjectDetail.vue  ProjectList.vue  ReportList.vue  TaskManagement.vue
