[project]
name = "lounger-platform-backend"
version = "1.0.0"
description = "Lounger test platform backend"
requires-python = ">=3.10"

dependencies = [
    "lounger>=1.3.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
